RESOLVED FIXED123349
[BlackBerry] Browser crashed at PlatformGraphicsContext::addDrawLineForText() when trying to upload a video to youtube
https://bugs.webkit.org/show_bug.cgi?id=123349
Summary [BlackBerry] Browser crashed at PlatformGraphicsContext::addDrawLineForText()...
Jacky Jiang
Reported 2013-10-25 11:32:51 PDT
Back up a patch which has been reviewed by George. JIRA 528074. #0 BlackBerry::Platform::Graphics::PlatformGraphicsContext::addDrawLineForText (this=0x0, origin=..., width=101.09375, printing=false) at /var/build/src/rim/webkit/platform/blackberryplatform/graphics/GraphicsContext.cpp:1732 #1 0x7b04babc in WebCore::GraphicsContext::drawLineForText (this=<optimized out>, pt=..., width=101.09375, printing=<optimized out>) at /var/build/src/rim/webkit/webkit/Source/WebCore/platform/graphics/blackberry/PathBlackBerry.cpp:256 #2 0x7abafffc in WebCore::InlineTextBox::paintDecoration (this=0x7e7bfd80, context=0x77bffc54, boxOrigin=..., deco=WebCore::TDNONE, decorationStyle=WebCore::TextDecorationStyleSolid, shadow=<optimized out>) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/InlineTextBox.cpp:1085 #3 0x7abb406c in WebCore::InlineTextBox::paint (this=0x7e7bfd80, paintInfo=..., paintOffset=...) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/InlineTextBox.cpp:823 #4 0x7abad89e in WebCore::InlineFlowBox::paint (this=<optimized out>, paintInfo=..., paintOffset=..., lineTop=<incomplete type>, lineBottom=<incomplete type>) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/InlineFlowBox.cpp:1095 #5 0x7aca5172 in WebCore::RootInlineBox::paint (this=0x7e7bfd20, paintInfo=..., paintOffset=..., lineTop=..., lineBottom=<incomplete type>) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/RootInlineBox.cpp:210 #6 0x7ac41a8e in WebCore::RenderLineBoxList::paint (this=0x7c1318d4, renderer=0x7c131870, paintInfo=..., paintOffset=...) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/RenderLineBoxList.cpp:262 ... #33 0x7ac3148c in WebCore::RenderLayer::paintLayer (this=0x7eb5a4d0, context=0x77bffc54, paintingInfo=..., paintFlags=4) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/RenderLayer.cpp:3663 #34 0x7ac31cee in WebCore::RenderLayer::paint (this=<optimized out>, context=0x77bffc54, damageRect=..., paintBehavior=0, paintingRoot=0x0, region=0x0, paintFlags=0) at /var/build/src/rim/webkit/webkit/Source/WebCore/rendering/RenderLayer.cpp:3474 #35 0x7aaf021a in WebCore::FrameView::paintContents (this=0x7dab5d80, p=0x77bffc54, rect=...) at /var/build/src/rim/webkit/webkit/Source/WebCore/page/FrameView.cpp:3517 #36 0x7ab3af90 in paint (rect=..., context=0x77bffc54, this=0x7dab5d80) at /var/build/src/rim/webkit/webkit/Source/WebCore/platform/ScrollView.cpp:1132 #37 WebCore::ScrollView::paint (this=0x7dab5d80, context=0x77bffc54, rect=...) at /var/build/src/rim/webkit/webkit/Source/WebCore/platform/ScrollView.cpp:1101 #38 0x7aaf2474 in WebCore::FrameView::paintControlTints (this=0x7dab5d80) at /var/build/src/rim/webkit/webkit/Source/WebCore/page/FrameView.cpp:3409 #39 0x7aae7364 in WebCore::FocusController::setActive (this=0x7daa1c50, active=<optimized out>) at /var/build/src/rim/webkit/webkit/Source/WebCore/page/FocusController.cpp:641 #40 0x7a7c8234 in BlackBerry::WebKit::WebPage::setFocused (this=0x7daa1950, focused=<optimized out>) at /var/build/src/rim/webkit/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:5071
Attachments
Jacky Jiang
Comment 1 2013-10-25 11:44:42 PDT
Note You need to log in before you can comment on or make changes to this bug.