[BlackBerry] Browser crashed at PlatformGraphicsContext::addDrawLineForText() when trying to upload a video to youtube https://bugs.webkit.org/show_bug.cgi?id=123349

Patch by Jacky Jiang <zhajiang@blackberry.com> on 2013-10-25.
Reviewed by George Staikos.
Internally reviewed by George Staikos, Konrad Piascik, Eli Fidler and Arvid Nilsson.

Browser crashed when dereferencing null PlatformGraphicsContext*.
In FrameView::paintControlTints(), we intentionally constructed GraphicsContext
with null PlatformGraphicsContext* and disabled painting by doing
context.setUpdatingControlTints(true). So we should not go further in
GraphicsContext::drawLineForText() if painting is disabled.
Check paintingDisabled() for the other functions in PathBlackBerry.cpp
as well; otherwise, it is likely we will crash at those places.

* platform/graphics/blackberry/PathBlackBerry.cpp:
(WebCore::GraphicsContext::fillPath):
(WebCore::GraphicsContext::strokePath):
(WebCore::GraphicsContext::drawLine):
(WebCore::GraphicsContext::drawLineForDocumentMarker):
(WebCore::GraphicsContext::drawLineForText):
(WebCore::GraphicsContext::clip):
(WebCore::GraphicsContext::clipPath):
(WebCore::GraphicsContext::canvasClip):
(WebCore::GraphicsContext::clipOut):

Canonical link: https://commits.webkit.org/141452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158030 268f45cc-cd09-0410-ab3c-d52691b4dbfc